# tidyup

./: .gitattributes  ARCHITECTURE.md  CLASSIFICATION.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LINKEDIN.md  README.md  SECURITY.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  model-eval.yml  release.yml
crates/tidyup-app/: Cargo.toml  README.md
crates/tidyup-app/src/: config.rs  executor.rs  lib.rs  migration.rs  rollback.rs  scan.rs
crates/tidyup-app/tests/: services_integration.rs
crates/tidyup-cli/: Cargo.toml  README.md
crates/tidyup-cli/src/: commands.rs  context.rs  main.rs  reporter.rs  review.rs  watch.rs
crates/tidyup-cli/tests/: smoke.rs
crates/tidyup-core/: Cargo.toml  README.md
crates/tidyup-core/src/: extractor.rs  frontend.rs  inference.rs  lib.rs  storage.rs
crates/tidyup-domain/: Cargo.toml  README.md
crates/tidyup-domain/src/: backup.rs  bundle.rs  change.rs  file.rs  lib.rs  migration.rs  run.rs
crates/tidyup-embeddings-ort/: Cargo.toml  README.md
crates/tidyup-embeddings-ort/src/: audio_taxonomy.rs  clap.rs  classifier.rs  embeddings.rs  image_taxonomy.rs  install.rs  lib.rs  paths.rs  siglip.rs  taxonomy.rs  util.rs
crates/tidyup-extract/: Cargo.toml  README.md
crates/tidyup-extract/src/: audio.rs  excel.rs  image.rs  lib.rs  mime.rs  pdf.rs  router.rs  text.rs
crates/tidyup-extract/tests/: fixtures_roundtrip.rs  pipeline_roundtrip.rs
crates/tidyup-extract/tests/fixtures/: README.md  sample.xlsx
crates/tidyup-inference-mistralrs/: Cargo.toml  README.md
crates/tidyup-inference-mistralrs/src/: lib.rs
crates/tidyup-inference-remote/: Cargo.toml  README.md
crates/tidyup-inference-remote/src/: lib.rs
crates/tidyup-pipeline/: Cargo.toml  README.md
crates/tidyup-pipeline/src/: calibration.rs  clustering.rs  heuristics.rs  lib.rs  migration.rs  naming.rs  profiler.rs  scan.rs  scanner.rs  yake.rs
crates/tidyup-storage-sqlite/: Cargo.toml  README.md
crates/tidyup-storage-sqlite/src/: backups.rs  changes.rs  files.rs  indexer.rs  lib.rs  runs.rs  schema.rs
crates/tidyup-storage-sqlite/tests/: integration.rs
crates/tidyup-ui/: Cargo.toml  README.md
crates/tidyup-ui/assets/: theme.css
crates/tidyup-ui/src/: context.rs  main.rs  pages.rs  reporter.rs  review.rs  state.rs
xtask/: Cargo.toml  README.md
xtask/corpus/: corpus.toml
xtask/corpus/files/: Makefile  README.md  budget.xlsx  chocolate_cake_recipe.txt  data.csv  flight_confirmation.txt  insurance_policy.txt  lecture_notes_biology.md  main.rs  resume_jane_doe.txt  server.py  settings.toml  standup_notes.md  tax_return_2023.txt
xtask/src/: eval.rs  main.rs  models.rs  privacy.rs  routing_eval.rs
