[workspace]
resolver = "2"
members = [
    "crates/tidyup-domain",
    "crates/tidyup-core",
    "crates/tidyup-app",
    "crates/tidyup-extract",
    "crates/tidyup-storage-sqlite",
    "crates/tidyup-inference-mistralrs",
    "crates/tidyup-inference-remote",
    "crates/tidyup-embeddings-ort",
    "crates/tidyup-pipeline",
    "crates/tidyup-cli",
    "crates/tidyup-ui",
    "xtask",
]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.90"
license       = "Apache-2.0"
repository    = "https://github.com/erovelli/tidyup"
homepage      = "https://github.com/erovelli/tidyup"
authors       = ["Tidyup Contributors"]
keywords      = ["ai", "llm", "file-organizer", "on-device", "cli"]
categories    = ["command-line-utilities", "filesystem"]

# Central lint policy. Every member crate inherits via `[lints] workspace = true`.
# This is the single source of truth — don't override unless a crate has a concrete reason.
[workspace.lints.rust]
unsafe_code                       = "forbid"
missing_debug_implementations     = "warn"
rust_2018_idioms                  = { level = "warn", priority = -1 }
unreachable_pub                   = "warn"
unused_lifetimes                  = "warn"
unused_qualifications             = "warn"

[workspace.lints.clippy]
pedantic         = { level = "warn", priority = -1 }
nursery          = { level = "warn", priority = -1 }
cargo            = { level = "warn", priority = -1 }
# Pragmatic overrides — pedantic defaults that create noise without catching real bugs.
module_name_repetitions   = "allow"
must_use_candidate        = "allow"
missing_errors_doc        = "allow"
missing_panics_doc        = "allow"
multiple_crate_versions   = "allow"
# Things we actively want to catch.
unwrap_used               = "warn"
expect_used               = "warn"
dbg_macro                 = "warn"
todo                      = "warn"
unimplemented             = "warn"

[workspace.dependencies]
# Internal
tidyup-domain                = { path = "crates/tidyup-domain",                version = "0.1.0" }
tidyup-core                  = { path = "crates/tidyup-core",                  version = "0.1.0" }
tidyup-app                   = { path = "crates/tidyup-app",                   version = "0.1.0" }
tidyup-extract               = { path = "crates/tidyup-extract",               version = "0.1.0" }
tidyup-storage-sqlite        = { path = "crates/tidyup-storage-sqlite",        version = "0.1.0" }
tidyup-inference-mistralrs   = { path = "crates/tidyup-inference-mistralrs",   version = "0.1.0" }
tidyup-inference-remote      = { path = "crates/tidyup-inference-remote",      version = "0.1.0" }
tidyup-embeddings-ort        = { path = "crates/tidyup-embeddings-ort",        version = "0.1.0" }
tidyup-pipeline              = { path = "crates/tidyup-pipeline",              version = "0.1.0" }

# Core
anyhow       = "1.0.102"
thiserror    = "2.0.18"
async-trait  = "0.1.89"
tokio        = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util"] }
futures      = "0.3.32"
serde        = { version = "1.0.228", features = ["derive"] }
serde_json   = "1.0.149"
toml         = "1.1"
tracing      = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid         = { version = "1.23", features = ["v4", "serde"] }
chrono       = { version = "0.4.44", features = ["serde"] }
blake3       = "1.8"
walkdir      = "2.5"
dirs         = "6"
infer        = "0.19"
mime_guess   = "2.0"

# Content extraction (feature-gated per format in tidyup-extract)
pdf-extract  = "0.10"
calamine     = "0.34"
image        = "0.25"
kamadak-exif = "0.6"
lofty        = "0.24"
# Pure-Rust audio decoder. Used by tidyup-embeddings-ort's CLAP backend to
# decode audio samples for the audio tower. Wide format support (WAV, FLAC,
# MP3, AAC, OGG). Maintained by the pdeltah/symphonia team, MPL-2.0,
# well over the dep-policy DL threshold.
symphonia    = { version = "0.5", default-features = false, features = ["wav", "flac", "mp3", "aac", "isomp4", "vorbis", "ogg"] }

# Embeddings (tidyup-embeddings-ort).
# `load-dynamic` keeps build-time TLS out of the dep graph — the runtime
# binary dlopens `libonnxruntime` via the `ORT_DYLIB_PATH` env var or a
# path set by tidyup at startup. First-run setup fetches the library and
# model alongside each other into `dirs::cache_dir()/tidyup/models/`.
ort          = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "load-dynamic", "api-23"] }
tokenizers   = { version = "0.21", default-features = false, features = ["onig"] }
ndarray      = "0.17"

# Feature-gated LLM inference (tidyup-inference-mistralrs).
# Pinned to a specific git rev for reproducibility. `tidyup-inference-mistralrs`
# is an optional dep of `tidyup-cli` behind `--features llm-fallback`, so this
# crate is NOT in the default release dependency graph. `cargo-deny` enforces
# that `mistralrs` / `candle` / `hf-hub` stay out of default builds.
mistralrs    = { git = "https://github.com/EricLBuehler/mistral.rs", rev = "aa1f16689e32ac0e1f6552eac74dfaf9cb3788f5", version = "0.8.1" }

# CLI
clap         = { version = "4.6", features = ["derive", "env"] }
indicatif    = "0.18"
console      = "0.16"

# UI (tidyup-ui). Only the UI binary depends on dioxus — the default CLI build
# does not, by design. The `check-privacy` xtask guarantees the default CLI
# dep graph stays free of the network/LLM crates dioxus-desktop pulls in.
dioxus       = { version = "0.7.7", features = ["desktop", "router"] }
# Native file/folder picker for the UI's path fields. Pure Rust wrappers over
# NSOpenPanel (macOS), the XDG portal (Linux), and IFileDialog (Windows). No
# network code path.
rfd          = "0.15"

# Storage
rusqlite     = { version = "0.39", features = ["bundled", "chrono"] }
tempfile     = "3.20"

# HTTP
reqwest      = { version = "0.13", features = ["json", "rustls", "http2", "charset"], default-features = false }

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"

[profile.dist]
inherits = "release"
lto      = "fat"
