[package]
name                   = "xtask"
version                = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true
readme                 = "README.md"
publish                = false
description            = "Workspace automation — CI entrypoint, model downloads, release prep."

[dependencies]
anyhow = { workspace = true }
clap   = { workspace = true }

[lints]
workspace = true
