[package]
name                   = "xtask"
version                = "0.0.0"
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true
readme                 = "README.md"
publish                = false
description            = "Workspace automation — CI entrypoint, model downloads, release prep."

[dependencies]
anyhow  = { workspace = true }
clap    = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "stream"] }
blake3  = { workspace = true }
dirs    = { workspace = true }
indicatif = { workspace = true }

# `eval` harness: runs the real cascade (heuristics + optional embeddings) over
# the golden corpus. xtask is a dev-only, never-published binary, so pulling in
# the pipeline + embedding crates here keeps the eval tool out of the shipping
# graph entirely.
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
tokio      = { workspace = true }
tidyup-domain         = { workspace = true }
tidyup-pipeline       = { workspace = true }
tidyup-embeddings-ort = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
