[package]
name = "tidyup-core"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true
readme      = "README.md"
description = "Port traits (hexagonal architecture). All implementations depend on this crate."

[dependencies]
tidyup-domain = { workspace = true }
async-trait   = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
uuid          = { workspace = true }

[lints]
workspace = true
