[package]
name = "tidyup-embeddings-ort"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true
readme      = "README.md"
description = "ONNX Runtime embedding backend (bge-small-en-v1.5 default)."

[dependencies]
tidyup-core   = { workspace = true }
tidyup-domain = { workspace = true }
async-trait   = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
blake3        = { workspace = true }
dirs          = { workspace = true }
ort           = { workspace = true }
tokenizers    = { workspace = true }
ndarray       = { workspace = true }

# Multimodal preprocessing. Image decode/resize for SigLIP; audio decode for
# CLAP. Both pure-Rust per CLAUDE.md dep policy.
image         = { workspace = true }
symphonia     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
