[package]
name = "tidyup-extract"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true
readme      = "README.md"
description = "Content extractors (PDF, Excel, images, audio, plain text). Feature-gated per format."

[features]
default = ["text", "pdf", "image"]
text    = []
pdf     = ["dep:pdf-extract"]
excel   = ["dep:calamine"]
image   = ["dep:image", "dep:kamadak-exif"]
audio   = ["dep:lofty"]

[dependencies]
tidyup-core   = { workspace = true }
tidyup-domain = { workspace = true }
async-trait   = { workspace = true }
anyhow        = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
infer         = { workspace = true }
mime_guess    = { workspace = true }
tracing       = { workspace = true }

pdf-extract   = { version = "0.10", optional = true }
calamine      = { version = "0.34", optional = true }
image         = { version = "0.25", optional = true }
kamadak-exif  = { version = "0.6", optional = true }
lofty         = { version = "0.24", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }

[lints]
workspace = true
