[package]
name = "tidyup-extract"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true
readme      = "README.md"
description = "Content extractors (PDF, Excel, images, audio, plain text). Feature-gated per format."

[features]
default = ["text", "pdf", "image"]
text    = []
pdf     = ["dep:pdf-extract"]
excel   = ["dep:calamine"]
image   = ["dep:image", "dep:kamadak-exif"]
audio   = ["dep:lofty"]

[dependencies]
tidyup-core   = { workspace = true }
tidyup-domain = { workspace = true }
async-trait   = { workspace = true }
anyhow        = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
infer         = { workspace = true }
mime_guess    = { workspace = true }
tracing       = { workspace = true }

pdf-extract   = { workspace = true, optional = true }
calamine      = { workspace = true, optional = true }
image         = { workspace = true, optional = true }
kamadak-exif  = { workspace = true, optional = true }
lofty         = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }

[lints]
workspace = true
