[package]
name = "tidyup-inference-remote"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true
readme      = "README.md"
description = "Remote/HTTP inference backends: OpenAI-compatible, Anthropic, Ollama."

[dependencies]
tidyup-core = { workspace = true }
async-trait = { workspace = true }
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
reqwest     = { workspace = true }
tokio       = { workspace = true }

[lints]
workspace = true
