[package]
name = "tidyup-ui"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true
readme      = "README.md"
description = "Dioxus desktop UI. Consumes the same tidyup-app services as the CLI."
publish     = false

[[bin]]
name = "tidyup-desktop"
path = "src/main.rs"

[features]
# Default build is LLM-silent by construction: `tidyup-inference-mistralrs` is
# not in the dependency graph. Tier 3 LLM fallback is a power-user opt-in with
# the same triple-gated shape as the CLI — see `CLAUDE.md` privacy model. (The
# UI intentionally does not surface the `remote` backend; that stays CLI-only.)
default = []
llm-fallback = ["dep:tidyup-inference-mistralrs"]
llm-metal = ["llm-fallback", "tidyup-inference-mistralrs/metal"]
llm-cuda  = ["llm-fallback", "tidyup-inference-mistralrs/cuda"]

[dependencies]
tidyup-domain         = { workspace = true }
tidyup-core           = { workspace = true }
tidyup-app            = { workspace = true }
tidyup-pipeline       = { workspace = true }
tidyup-storage-sqlite = { workspace = true }
tidyup-extract        = { workspace = true }
tidyup-embeddings-ort = { workspace = true }

# Feature-gated power-user opt-in. MUST NOT appear in the default graph — the
# privacy model requires the default UI binary to be LLM-silent.
tidyup-inference-mistralrs = { workspace = true, optional = true }

anyhow             = { workspace = true }
async-trait        = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }

dioxus             = { workspace = true }
rfd                = { workspace = true }

[lints]
workspace = true
